--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="hero">
-    <video src="video/lorem_vid01.mp4" loop autoplay></video>
+    <video src="video/lorem_vid01.mp4" id="video"></video>
     <div class="overlay">
       <div class="container h-100 d-flex flex-column justify-content-between">
         <div></div>
@@ -193,6 +193,25 @@
 
   <script src="js/progressbar.min.js"></script>
   <script>
+    var video = document.getElementById("video");
+    var playing = false;
+
+    //The timeout time may need to be higher depending on the runtime of the mdl init...
+    setTimeout(function() {
+        video.play();
+        }, 500); 
+
+    // I got some issues with long videos (20s+),there i had to reset the 
+    // current play time about 3 seconds ( (video.duration * 1000)-3000) ) before the end.
+    video.addEventListener("play", function() {
+          if(!playing) {
+            setInterval(function() {
+              video.currentTime = 0;
+            }, (video.duration * 1000)-20);  
+            playing = true;
+          }
+        });
+    
     var bar = new ProgressBar.Line('#progress-bar', {
       strokeWidth: 50,
       easing: 'easeInOut',
