size is decreased

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
   <div class="dashboard">
     <div class="container">
-      <div class="dashboard__section d-flex pt-7">
-        <div class="col p-0 d-flex justify-content-end">
+      <div class="dashboard__section d-flex">
+        <div class="col p-0 d-flex justify-content-end align-items-end">
           <div class="text-center">
-            <img src="img/icons/icon-email.svg" alt="" class="mb-2">
+            <img src="img/icons/icon-email.svg" alt="" class="mb-2" width="75px">
             <p class="h6 text-uppercase"><b>E-MAILS SENT</b></p>
             <p class="h4"><b>17 000</b></p>
           </div>
@@ -45,7 +45,7 @@
 
         <div class="col p-0 d-flex">
           <div class="text-center">
-            <img src="img/icons/icon-phone.svg" alt="" class="mb-2">
+            <img src="img/icons/icon-phone.svg" alt="" class="mb-2" width="75px">
             <p class="h6 text-uppercase"><b>SMS SENT</b></p>
             <p class="h4"><b>19 980</b></p>
           </div>
@@ -57,8 +57,8 @@
       <div class="dashboard__section">
         <h2 class="dashboard__header h7 text-uppercase pb-3"><b>VIEWED FLIM:</b></h2>
         <div class="d-flex">
-          <div class="col p-0 d-flex justify-content-between">
-            <div>
+          <div class="col p-0 d-flex justify-content-end">
+            <div class="mr-5">
               <div id="progress-circle"></div>
             </div>
             <div class="text-center">
@@ -108,23 +108,23 @@
         <h2 class="dashboard__header h5"><b>SoMe-sharing:</b></h2>
         <div class="d-flex justify-content-center pt-5">
           <div class="text-center px-7">
-            <img src="img/icons/icon-fb.svg" alt="">
-            <p class="py-1 text-nowrap">Facebook</p>
+            <img src="img/icons/icon-fb.svg" alt="" width="60px">
+            <p class="py-1 text-nowrap h8">Facebook</p>
             <p class="h6 text-nowrap"><b>2 443</b></p>
           </div>
           <div class="text-center px-7">
-            <img src="img/icons/icon-messenger.svg" alt="">
-            <p class="py-1 text-nowrap">Messenger</p>
+            <img src="img/icons/icon-messenger.svg" alt="" width="60px">
+            <p class="py-1 text-nowrap h8">Messenger</p>
             <p class="h6 text-nowrap"><b>652</b></p>
           </div>
           <div class="text-center px-7">
-            <img src="img/icons/icon-map.svg" alt="">
-            <p class="py-1 text-nowrap">Besøk nettside</p>
+            <img src="img/icons/icon-map.svg" alt="" width="60px">
+            <p class="py-1 text-nowrap h8">Besøk nettside</p>
             <p class="h6 text-nowrap"><b>633</b></p>
           </div>
           <div class="text-center px-7">
-            <img src="img/icons/icon-arrow_down.svg" alt="">
-            <p class="py-1 text-nowrap">Lastet ned</p>
+            <img src="img/icons/icon-arrow_down.svg" alt="" width="60px">
+            <p class="py-1 text-nowrap h8">Lastet ned</p>
             <p class="h6 text-nowrap"><b>493</b></p>
           </div>
         </div>
